--- a/backup/新冠的真实原因.md
+++ b/backup/新冠的真实原因.md
@@ -34,7 +34,6 @@
 ​	记得一次月考，快要高考的时候，我发现我的桌上多了一张纸，我忘了内容是啥，不知道是谁写的，反正是嘲讽我的，如果说你在快班，我想对你说，这么喜欢当背后小人么？如果说你在慢班，我想对你说，活该你在慢班！无论你在快班还是在慢班，我都想对你说，你的字好丑啊。
 ​	高考前，一晚自修，我用我自己的作文模板写了一篇作文，让刘家宏去找她修改提建议，结果那年高考英语真考了同类型的作文，当我拿到英语卷子时，我第一眼看的就是作文，那一刻我明白了我所有的付出都是值得的。最后我考了482分，被五邑大学的通信工程专业录取了。
 ​	我们复读的福利，就是学校外界提供捐赠的，我信访后不久，学校就成立了家委会。其实我的这件事情我家里人根本不知道细节，如果我没看错的话，我大舅去学校处理了这件事，在我晚上回家的路上，还好几次看到我大舅的车停在路上，车还打着火的那种，我大舅原来盖了11层楼房子，但是我信访后，被人举报了，拆了。有一晚，班主任趁我上自修的时候找了我爸单独谈话，给了我爸200块钱，他在我回家的路上被我看到了。后来，我爸说那200块钱是我外婆给班主任的，说我得罪了班主任，我外婆才给了200块钱给班主任。
-        后来 ，应该是化州纪检委给我打了一个电话，说我因为提供的证据不足，对这件事不予立案调查。
 ​	我选择坚持信访是因为我觉得学校会私自处理这件事，兜兜转转，信访还是回到了被举报方的手中，我想这也是当前信访系统和监督体系的一大弊端吧，这侵害了我们的知情权。把个人情感带入到工作中，这是不应提倡的。我第一次把这个文档发给广东信访局时，没有选择公开，农场的人第二天下午就给我打了电话，问需不需要帮助，还问我们家在哪里，但我感觉这更像是威胁。
 
 
@@ -60,7 +59,7 @@
 ​	休学后，我还特地找好伙伴们合照留念，想着复刻我大一时第一次班级篮球比赛的合照，那一次合照中，所有人都站成一排，我和hyn还踮脚了，hyn在我右手边，他右手搭在wyq肩上，这一次合照中，就我一个人笑了，露出牙齿，其他人都没有笑，hyn和wyq两个人还在我们所有人前面，hyn左手还伸了一个大拇指给wyq，他右手搭在wyq肩上。我觉得，是hyn让wyq叫人给我垫脚，撞我的腰椎的。在宿舍时，hyn经常把空调出风口往上调，空调出风全落在了我的脖子上，我多次提醒他开空调时把出风口调一下，但他还是我行我素。
 ​	我因为生源地贷款回到化州教育局办理推迟毕业年份业务，当时我是想既然来都来了，就去查一下当年关于我的笔录和对班主任的处理结果，结果工作人员以系统升级和负责这件事的工作人员已经退休的理由打发了我。
 
-​	我和我大舅、我姑给我打微信电话，我说我知道错了，我的意思是错在我经常骂人，不知道他们怎么想。2018年盛夏的一天中午，hwc睡在我上铺，他也许也听到，我做了一个让我哭醒的梦，我表姐和一个陌生男子在客厅聊天，任我躺在房间的床上怎么喊也没人理，最后孤独终身了，也许“我表姐和一个陌生男子在客厅聊天”是说她结婚吧，“任我躺在房间的床上怎么喊也没人理”是说我做了气切手术吧。我大舅说，我对我爸什么态度，我说，那我读这么多书是为了什么，他说，我读书是为了我自己，要不然就不要读了。
+​	我和我大舅、我姑给我打微信电话，我大舅说，多点骂人嘛，我说我知道错了，我的意思是错在我经常骂人，不知道他们怎么想。2018年盛夏的一天中午，hwc睡在我上铺，他也许也听到，我做了一个让我哭醒的梦，我表姐和一个陌生男子在客厅聊天，任我躺在房间的床上怎么喊也没人理，最后孤独终身了，也许“我表姐和一个陌生男子在客厅聊天”是说她结婚吧，“任我躺在房间的床上怎么喊也没人理”是说我做了气切手术吧。我大舅说，我对我爸什么态度，我说，那我读这么多书是为了什么，他说，我读书是为了我自己，要不然就不要读了。
 ​	我原来有两种安眠药的，一个是艾司唑仑，一个是盐酸曲唑酮，24年春晚我姐在家时，我的艾司唑仑安眠药不见了。
 
 ​	我自杀前几天，我把pzy特殊照顾我的事情发到了我爸的家族群，在我自杀的前一晚，ljh发了一条朋友圈，说自己被人那铁棍打了，配图是一张躺在医院的图片，我格式化了我的电脑，删掉了几乎所有人的联系方式和通话记录，退出了所有微信群、QQ群，清空了朋友圈所有内容，清空了所有网盘资料，注销了大部分社交、网络账号，把所有关于pzy特殊照顾我和我信访的资料删了，我在我姐面前拿排插准备上吊，我说我受不了这屈辱，她站在旁边，什么也不做，就静静地看着，她在微信跟我说，相信他们，我后来吃了4片盐酸曲唑酮后才睡的。我看了中山一院男科发表的一篇标题是不与智者争高低，不与“小人”论短长的文章，不知道这是什么意思。
@@ -81,11 +80,11 @@
 ​	我的樱桃键盘接入电脑后，只要电脑睡眠一下再打开，键盘就用不了了，我的扩展坞是带有网卡的，本来是用的了的，借给twx用过，但是很莫明其妙地用不了了，我的手机华为荣耀honor 10是在线下实体店买的，我自己去华为售后服务店换过屏幕，在高州人民医院，我的手机被一个姓刘的陪护摔了一下，扬声器时好时坏，被我爸拿去维修过，玻璃后盖都被撬碎了。
 ​	“养小鬼”这个话题，是大三和江伟良同学喝酒时，他提起的，我现在意识到我被养小鬼了。我大舅、hwc今天的成绩，说我大舅、hwc是靠养小鬼来的也没问题，但是对于经常去他们家玩的我来说，他们的确付出了很多努力，我都看在眼里。Hwc经常带我出去玩，是他教我拿钥匙划别人的车。我在写这篇文章时，广州慈惠医院的yjy主任给我打了一个电话，说我如果有什么想吐槽的就打电话跟她说。
 
-​	在我的激素药由地塞米松变为醋酸泼尼松前，我在医院碰到了一个同样是脊髓炎的患者，他和我说，地塞米松吃多了脸会变胖，会长痘痘，我信了。现在想想，也许那名患者是特意安排的。
+​	在我的激素药由地塞米松变为醋酸泼尼松前，我在医院碰到了一个同样是脊髓炎的患者，他和我说，地塞米松吃多了脸会变胖，会长痘痘，我信了。现在想想，也许那名患者是特意安排的。大家应该更多地关注多发性硬化、视神经脊髓炎等脊髓炎这个罕见病群体，请给他们足够多的耐心，少一点议论他们的生活，他们真的不易。
 ​	我外婆说，怕我会取了媳妇不要我妈，其实我外婆很溺爱我妈，但我想说，其实我很生气，她总是未雨绸缪，想我或者媳妇会干出这种事，什么事都宠着我妈，这样只会害了我妈。其实我外婆自己和我舅妈的婆媳关系非常紧张，动不动就吵架，现在想想，算是知道为什么了。
 ​	我在2024年10月24日封了气切，是在广州慈惠医院封的，yjy主任安排了一个女医生做我的主治医生，她没什么经验吧，我到现在也不能流畅得说话，但是手术前yjy主任和她都在，没有抽气就给我封了，这是一句“这是一场医疗事故”就能摆平的事。
 ​	我姐和我爸经常想用激将法PUA我去做高压氧，我说了无数次我左半边肢体用不了力就是高压氧造成的，他们还要坚持要我去做高压氧，有的人现在想我死，又怕我死太快，想慢慢折磨我死，能不能给个痛快，人固有一死，我不怕死又怕死，怕自己死得没有价值。如果改革必须经历鲜血的洗礼，我愿意付诸全部。
-​	在广州慈惠医院，我做了好几次高压氧，做完最后一次高压氧转去孙逸仙医院后，我的左半边肢体用不了力了，我爸在照顾我时说，不是你死就是我死。他在给我按摩脚时，握着我的脚掌抬起我的脚，我说膝盖痛，他说痛也要按，扶我练习站立时，我说我腰椎痛，他还硬要坚持左右摆动我的上半身体，他连杠杆原理都不懂，连因人而异、条件反射都不懂，我意识到了教育的重要性，因材施教的重要性，我爸是小学文凭，我说的痛是物理上的痛，我爸理解成这是病理上的痛。我爸是个很倔强的人，做什么事情都很固执，我做什么事情都要听他的，比如我的腰现在用不了力，站不起来，他还硬要我站，我的左手弯曲不了，他硬要拍打我的手，搞得我的手不但弯曲不了还痛了起来，这也许也是我这种性格形成的原因。我现在就像洋娃娃一样被人捏在手里，我的命被捏在了别人手里，像社会巨婴，衣来伸手，饭来张口，别人让我干嘛我就得干嘛，很没有安全感。我怀疑我被非法软禁了，但是我又没有证据。
+​	在广州慈惠医院，我做了好几次高压氧，做完最后一次高压氧转去孙逸仙医院后，我的左半边肢体用不了力了，我爸在照顾我时说，不是你死就是我死。他在给我按摩脚时，握着我的脚掌抬起我的脚，我说膝盖痛，他说痛也要按，扶我练习站立时，我说我腰椎痛，他还硬要坚持左右摆动我的上半身体，他连杠杆原理都不懂，连因人而异、条件反射都不懂，我意识到了教育的重要性，因材施教的重要性，我爸是小学文凭，我说的痛是物理上的痛，我爸理解成这是病理上的痛。我爸是个很倔强的人，做什么事情都很固执，我做什么事情都要听他的，比如我的腰现在用不了力，站不起来，他还硬要我站，我的左手弯曲不了，他硬要拍打我的手，搞得我的手不但弯曲不了还痛了起来，这也许也是我这种性格形成的原因。我现在就像洋娃娃一样被人捏在手里，我的命被捏在了别人手里，像社会巨婴，衣来伸手，饭来张口，别人让我干嘛我就得干嘛，很没有安全感。我怀疑我被非法软禁了，但是我又没有证据，我是填鸭式教育的受害者。
 ​	Hwc在《使命召唤》这款游戏的昵称是killer_1997，而我姐就是1997年出生的，我想这已经很明显地提醒我，其实最想弄死我的人是我姐吧。我姐说她自己能照顾好这个家庭，然后我说最好能嫁给这么有能力的人，她说我在诅咒她。我吃的醋酸泼尼松是信谊牌的，我二舅在信宜这个地方当过官，高州人民医院给我开的醋酸泼尼松是海王牌的，这是在暗喻我是海王呗。
 ​	在去广州看病前，我在高州人民医院住过院，第二次住院时，我的主治医生是吕江华医生，他给我注射的激素用法超过了普通患者的用法，还建议我去孙逸仙医院找一个姓闩的医生看，他给我介绍这位医生时，说他姓阎罗王的阎。
 ​	我刚开始去中山一院，是黄鑫教授给我看病的，说我是视神经脊髓炎，后来我的主访医生变成了冯慧宇教授，冯慧宇教授第一次给我看病时，困惑为什么我的腰穿结果里没有寡克隆带的结果，那张关于我的寡克隆带结果的图是我后来问我爸拿的，冯慧宇教授觉得我是多发性硬化，让我吃了氨吡啶缓释片，还让我联系一个好像叫廖奋春的医药代表打奥法妥木单抗，后来我把证件等资料寄给过他，他说他可以帮我拿药，然后寄给我，我当时因为不知道自己究竟是多发性硬化还是视神经脊髓炎，而且当时纳入医保用来治疗视神经脊髓炎的药物非常少，次年有新的药物纳入医保治疗视神经脊髓炎，他问我用不用药时，我犹豫不决，他还调侃我用不起次年的新药，我就把证件寄给了他。我现在怀疑我爸给我的那张图是p的。我也去过邱伟教授那里看过，他并不建议我吃氨吡啶缓释片，冯慧宇和邱伟教授都差不多是整个广州在这个疾病研究上最权威的医生了，但是冯慧宇教授的普通门诊挂号费是30元而邱伟教授只有特殊门诊，挂号费是300元，我为了省钱就把冯慧宇教授当作我的主访医生了。
@@ -145,7 +144,7 @@
 
 
 
-​	老虎、苍蝇一起拍，这一拍算是拍到中国的大动脉了，中国在扫黑除恶、反腐上还有很长一段路要走。先富带后富，在我现在看来，中国就是让资本主义先富起来，然后再让社会主义再富起来，这也许也是中国为什么要坚持一国两制的原因之一吧，社会主义能不能富起来，就要看资本主义有没有良心了。当民生最关心的医疗和教育都已经出现腐败时，可以看出这个社会存在着很多问题。我不是要教你们怎么做人做事，更不是要教你们如何躺平摆烂。很多人对事情的因果关系都有很大的误区，比如像歌词，“不是因为寂寞才想你，是因为想你才寂寞”，我让我爸学电脑，我爸请问我怎么我学了电脑也不见我发达，我说不是学了电脑就能发达，是发达的人会电脑，做人，要学会心狠，但更要善良且带有锋芒，八字这玩意很邪乎，但我们更要相信德先生和赛先生。人的所有苦难，说到底，都是咎由自取，吃得苦中苦，方为人上人，但是苦难并不值得歌颂，没必要自讨苦吃，苦难，只是我们前行路上的绊脚石，我们没办法避免，没必要搬起石头砸自己的脚。这个世界都在追求发展，这个世界迟早会毁在自己手里。第三次世界大战早已打响，你我只不过都是炮灰，在这场没有硝烟的战争中，落后就要挨打，我们要紧跟时代潮流，否则就会被时代抛弃，我们要与时共进。
+​	老虎、苍蝇一起拍，这一拍算是拍到中国的大动脉了，中国在扫黑除恶、反腐上还有很长一段路要走。先富带后富，在我现在看来，中国就是让资本主义先富起来，然后再让社会主义再富起来，这也许也是中国为什么要坚持一国两制的原因之一吧，社会主义能不能富起来，就要看资本主义有没有良心了。当民生最关心的医疗和教育都已经出现腐败时，可以看出这个社会存在着很多问题。我不是要教你们怎么做人做事，更不是要教你们如何躺平摆烂。很多人对事情的因果关系都有很大的误区，比如像歌词，“不是因为寂寞才想你，是因为想你才寂寞”，我让我爸学电脑，我爸请问我怎么我学了电脑也不见我发达，我说不是学了电脑就能发达，是发达的人会电脑，做人，要学会心狠，但更要善良且带有锋芒，八字这玩意很邪乎，但我们更要相信德先生和赛先生。人的所有苦难，说到底，都是咎由自取，吃得苦中苦，方为人上人，但是苦难并不值得歌颂，没必要自讨苦吃，苦难，只是我们前行路上的绊脚石，我们没办法避免，没必要搬起石头砸自己的脚。这个世界都在追求发展，这个世界迟早会毁在自己手里。第三次世界大战早已打响，你我只不过都是炮灰，在这场没有硝烟的战争中，落后就要挨打，我们要紧跟时代潮流，否则就会被时代抛弃。
 
 
 
@@ -169,7 +168,7 @@
 
 ​	我晚上睡觉出汗，我爸说我是虚，不断说让我吃药，诚然我是虚，但是有没有可能这是排毒的一个表现，他老是想叫我吃药是想干嘛，是药三分毒，我在减药量，我在戒毒。我爸给我喝黄芪精口服液，喝黄芪精本来是好的，但是给我下药后再给我喝就另当别论了，出汗是排毒的一个表现，喝了黄芪精口服液我可能就不出汗了。
 ​	我爸的名字是梁倚发，他也信神、信八字，现在老是想着从天而降的发财，不知道他有没有想过，他现在拥有的，就是他的最大财富，他现在满口粗口，经常变相说我不是人。我姐说，要不是我变成这样，早就不理这个家了，但这只是我姐个人的话语，并不能代表我的所思所想。满招损，谦受益，人啊，总是觉得自己不可一世，总是在失去后才懂得珍惜，总是喜欢玩火自焚。
-​	我只想说，封建思想害死人，封建帝制更害死人。“大人，时代变了”，“你挑的嘛，偶像”，我走的路从来不是我挑的，欲戴王冠，需承其重，既然你不仁，那么也休怪我不义，既然有人这么想戴这个王冠，这么喜欢过河拆桥、玩火自焚，还不肯放过我，我也要当个没心没肺的人，能怪别人就别怪自己，那我就让你戴个够，让你拆个够，让你玩火玩个够。在你们眼里，我是贼喊捉贼，那大不了就同归于尽，我也是想你们好。君子报仇，十年未晚，十年河东，十年河西，这一次，我选择当一个逃兵，当一次废物，这道题的唯一解也是最优解就是，别再让我继续当人了，我不死，于情于理，好像都有点说不过去，我死于知道得太多。希望所有人都能好好地活着，要不然你对不起我，更对不起你自己。从哪里来，回哪里去，人往高处走，水往低处流，希望我的骨灰能够被撒入大海，这也算是我的遗愿了。
+​	我只想说，封建思想害死人，封建帝制更害死人。“大人，时代变了”，“你挑的嘛，偶像”，我走的路从来不是我挑的，欲戴王冠，需承其重，既然你不仁，那么也休怪我不义，既然有人这么想戴这个王冠，这么喜欢过河拆桥、玩火自焚，还不肯放过我，我也要当个没心没肺的人，能怪别人就别怪自己，那我就让你戴个够，让你拆个够，让你玩火玩个够。在你们眼里，我是贼喊捉贼，那大不了就同归于尽，我也是想你们好。君子报仇，十年未晚，十年河东，十年河西，这一次，我选择当一个逃兵，当一次废物，这道题的唯一解也是最优解就是，别再让我继续当人了，我不死，于情于理，好像都有点说不过去。希望所有人都能好好地活着，要不然你对不起我，更对不起你自己。从哪里来，回哪里去，人往高处走，水往低处流，希望我的骨灰能够被撒入大海，这也算是我的遗愿了。
 
 
 
@@ -182,7 +181,7 @@
 ​	中国人尤其是广东人对数字 4、8的敏感程度非常大。
 ​	本是同根生，相煎何太急。我不知道我姐是否早就知道我的身世，反正没人和我说过，我也压根不知道，我要是知道的话，会这么容易掉进这陷阱么。我没输过血，但是用过人类血制品，丙种免疫球蛋白，我要是我二舅，可能会在这里入手。
 ​	我外婆、我舅妈、我妈、我堂姐、我姐、我姐联系的医生等等，基本都是女性，这是girls help girls，我姐不认为男女有别，但我感觉她在男、女权问题上极其敏感。
-​	我的亲生父亲是我二舅，这已经很离谱很狗血了，如果我姐的亲生父亲也不是我爸，我只能说，我的人生真的也太离谱太狗血了，我的人生，连电视剧也不敢这么拍，如果人生如戏，那我的人生就有点像《楚门的世界》，我这一生，如履薄冰。我感觉，我遇到的每一个人，都是经过安排的。我这一生，真是直了。我活得像一面镜子，一个反面教材，你想对我说的，其实也是你最想和自己说的，包括我自己。水能载舟，亦能覆舟。我活得人不是人，鬼不像鬼，小丑竟是我自己，我就是那个不肯脱下孔乙己的长衫的人，我就是那个衣冠禽兽。
+​	我的亲生父亲是我二舅，这已经很离谱很狗血了，如果我姐的亲生父亲也不是我爸，我只能说，我的人生真的也太离谱太狗血了，我的人生，连电视剧也不敢这么拍，如果人生如戏，那我的人生就有点像《楚门的世界》，我这一生，如履薄冰。我感觉，我遇到的每一个人，都是经过安排的。我这一生，真是直了。我活得像一面镜子，一个反面教材，你想对我说的，其实也是你最想和自己说的，包括我自己，我是什么样的人，完全取决于你们的想法 。水能载舟，亦能覆舟。我活得人不是人，鬼不像鬼，小丑竟是我自己，我就是那个不肯脱下孔乙己的长衫的人，我就是那个衣冠禽兽，我就是双标。
 ​	吃公家饭，办公家事，坐标广东省茂名市化州市官桥镇红峰农场，我“得了”多发性硬化后，我家里人为我办支出困难户，却还要给人送礼，合计超一千元左右，诚然，中国是人情社会，但是我认为此人情非彼人情，办点事情，动不动就要送礼，这就是当今中国吗？还有就是如果我没记错，政府是给了钱解决用水问题吧，难道这些钱只够我们重新铺设水管吗？居民用水紧张、脏等问题依旧存在，听我爸说，这些水都是官桥中学学生的生活用水，水灾把原来的水井冲垮了，官桥中学学生的生活用水排到旁边河里，农场再从河里抽水，我们的用水是农场的水。
 ​	Hwc微信和我说，我的行为值得表扬，但不值得提倡，我在想，我的行为什么时候提倡了。我从来没想过自己的一句话能让这么多人为之疯狂。他也说，我妈不是我的工人，我想说，对的，她不是我的工人，但也不是你们的工人。
 ​	五邑大学今年40周年校庆，那就杀个人来祝祝庆吧。我踏进五邑大学起，我就已经完全掉进了这个陷阱，我的一言一行都被记录了下来。我把这个文档通过邮箱发给五邑大学校长，第二天，学校方面就打电话来，和我爸说，要看好我，不要让更多人看到我写的内容。
@@ -193,7 +192,7 @@
 
 
 ​	总结一下，我感觉，我被恶意捧杀了，被陷害了，我外公的死、我表妹的车祸和我外婆有关，我奶奶的死和我爸有关，疫情和我二舅有关，我的亲生父亲其实是我二舅，而我爸给我二舅打工，我经常去大舅家却拿舅妈的内衣裤打飞机，当时给我爸输的那包血是有问题的，我怀疑也是小鬼的血，我爸是在我出生之后，在他胃出血之前才有那次赌博。
-​	以上仅代表我的个人的主观想法和立场，是我在死神面前的思考，这是一个所有人都知道的秘密，一个活生生的只相信科学的人到最后也只能信神、信佛、信八字，说我诬告也好，说我阴谋论也罢，请保持自己独立客观理性的思考，自行甄别，很多东西只可意会不可言传，眼看未必为实。这不是我想要的答案，但这会是某些人想要的答案。我写这篇文章不仅是想救这个家庭，更是为我自己洗白，救我自己，告诉世人真相。这篇文章不仅是给你们看的，也是给我自己看的。在阅读这篇文章时，要知道我妈是一名聋哑人，是女性，事情发生时我的年龄，我也是有妈的孩子，我也是个人，我也曾经是个孩子。
+​	以上仅代表我的个人的主观想法和立场，是我在死神面前的思考，这是一个所有人都知道的秘密，一个活生生的只相信科学的人到最后也只能信神、信佛、信八字，说我诬告也好，说我阴谋论也罢，请保持自己独立客观理性的思考，自行甄别，很多东西只可意会不可言传，眼看未必为实。这不是我想要的答案，但这会是某些人想要的答案。我写这篇文章不仅是想救这个家庭，更是为我自己洗白，救我自己，告诉世人真相。这篇文章不仅是给你们看的，也是给我自己看的。在阅读这篇文章时，要知道我妈是一名聋哑人，是女性，事情发生时我的年龄，时间永远是关键点，我也是有妈的孩子，我也是个人，我也曾经是个孩子。
 ​	互联网是有记忆的，力的作用是相互的，人生得意须尽欢，莫使金樽空对月，别和自己过不去，人不为己，天诛地灭，这一次，我要提早交一次卷，我就好好当一回键盘侠，我只不过是九年义务教育漏网之鱼，我就是我，没人能代替我发言，别人说的话不能代表我，别从别人的嘴里了解我，我自己做的事情，自己承担，没人能从我身上薅羊毛了，枪打出头鸟，反正我是小鬼，我不下地狱，谁下地狱。放下助人情怀，尊重他人命运，我能理解别人，但没人能理解我，更没人愿意放过我。安能摧眉折腰视权贵，使我不得开心颜。不以物喜，不以己悲，存在即合理，天生我材必有用。要自爱才有人爱，站得越高，看到的风景越美丽，但是摔得也越惨，风浪越大，鱼越贵，有限制的自由才叫自由，要不然就会变成放纵，别让执念成为枷锁，上梁不正下梁歪，这是塌房的原因，十年前的那颗子弹正中我的眉心，这是教育闭环。我从来不觉得自己是个例外，只是有人一开始就不把我当作正常人。舍小家，为大家，但我不要这样的小家，这锅太大了，我太累了，我实在是背不下也不想背。全世界的人都知道我是phy的狗，己所不欲勿施于人，强扭的瓜不甜，舔狗舔到最后真的会一无所有，这也许就是我用我这种激进的方式追求phy带来的报应吧。
 ​	我们每个人的一言一行都会对这个世界产生巨大影响，这也许就是蝴蝶效应的威力吧。人类命运共同体，流水不争先，争滔滔不绝，我们要坚持走可持续发展道路，在不影响这代人发展的同时，也不影响 下一代人的发展，绿水青山就是金山银山。
 
