🎉auto update by Gmeek action

--- a/backup/新冠的真实原因.md
+++ b/backup/新冠的真实原因.md
@@ -78,7 +78,7 @@
 ​	我问我妈拿我二舅找人开的中药处方，我妈说被我姐、我爸拿了，我问我姐和我爸要时，他们都说自己没拿，所以这三个人中必定有人说谎，我自己感觉我姐说谎的可能性最大。
 ​	我和我姐上大学用的第一台笔记本电脑是我大舅送的，我的那台笔记本电脑是组装的，我现在用的笔记本电脑被hwc接触过，在粤嵌上课时接过网线，有电有信号的地方就逃不掉网络渗透。我那台笔记本电脑卖给别人了，我对hwc说谎说是主板烧了导致电脑用不了才卖给别人。
 ​	我的樱桃键盘接入电脑后，只要电脑睡眠一下再打开，键盘就用不了了，我的扩展坞是带有网卡的，本来是用的了的，借给twx用过，但是很莫明其妙地用不了了，我的手机华为荣耀honor 10是在线下实体店买的，我自己去华为售后服务店换过屏幕，在高州人民医院，我的手机被一个姓刘的陪护摔了一下，扬声器时好时坏，被我爸拿去维修过，玻璃后盖都被撬碎了。
-​	“养小鬼”这个话题，是大三和江伟良同学喝酒时，他提起的，我现在意识到我被养小鬼了。我大舅、hwc今天的成绩，说我大舅、hwc是靠养小鬼来的也没问题，但是对于经常去他们家玩的我来说，他们的确付出了很多努力，我都看在眼里。Hwc经常带我出去玩，是他教我拿钥匙划别人的车。我在写这篇文章时，广州慈惠医院的yjy主任给我打了一个电话，说我如果有什么想吐槽的就打电话跟她说。
+​	“养小鬼”这个话题，是大三和江伟良同学喝酒时，他提起的，我现在意识到我被养小鬼了。我大舅、hwc今天的成绩，说我大舅、hwc是靠养小鬼来的也没问题，但是对于经常去他们家玩的我来说，他们的确付出了很多努力，我都看在眼里。Hwc经常带我出去玩，他教我拿钥匙划别人的车。我在写这篇文章时，广州慈惠医院的yjy主任给我打了一个电话，说我如果有什么想吐槽的就打电话跟她说。
 
 ​	在我的激素药由地塞米松变为醋酸泼尼松前，我在医院碰到了一个同样是脊髓炎的患者，他和我说，地塞米松吃多了脸会变胖，会长痘痘，我信了。现在想想，也许那名患者是特意安排的。大家应该更多地关注多发性硬化、视神经脊髓炎等脊髓炎这个罕见病群体，请给他们足够多的耐心，少一点议论他们的生活，他们真的不易。
 ​	我外婆说，怕我会取了媳妇不要我妈，其实我外婆很溺爱我妈，但我想说，其实我很生气，她总是未雨绸缪，想我或者媳妇会干出这种事，什么事都宠着我妈，这样只会害了我妈。其实我外婆自己和我舅妈的婆媳关系非常紧张，动不动就吵架，现在想想，算是知道为什么了。
@@ -168,7 +168,7 @@
 
 ​	我晚上睡觉出汗，我爸说我是虚，不断说让我吃药，诚然我是虚，但是有没有可能这是排毒的一个表现，他老是想叫我吃药是想干嘛，是药三分毒，我在减药量，我在戒毒。我爸给我喝黄芪精口服液，喝黄芪精本来是好的，但是给我下药后再给我喝就另当别论了，出汗是排毒的一个表现，喝了黄芪精口服液我可能就不出汗了。
 ​	我爸的名字是梁倚发，他也信神、信八字，现在老是想着从天而降的发财，不知道他有没有想过，他现在拥有的，就是他的最大财富，他现在满口粗口，经常变相说我不是人。我姐说，要不是我变成这样，早就不理这个家了，但这只是我姐个人的话语，并不能代表我的所思所想。满招损，谦受益，人啊，总是觉得自己不可一世，总是在失去后才懂得珍惜，总是喜欢玩火自焚。
-​	我只想说，封建思想害死人，封建帝制更害死人。“大人，时代变了”，“你挑的嘛，偶像”，我走的路从来不是我挑的，欲戴王冠，需承其重，既然你不仁，那么也休怪我不义，既然有人这么想戴这个王冠，这么喜欢过河拆桥、玩火自焚，还不肯放过我，我也要当个没心没肺的人，能怪别人就别怪自己，那我就让你戴个够，让你拆个够，让你玩火玩个够。在你们眼里，我是贼喊捉贼，那大不了就同归于尽，我也是想你们好。君子报仇，十年未晚，十年河东，十年河西，这一次，我选择当一个逃兵，当一次废物，这道题的唯一解也是最优解就是，别再让我继续当人了，我不死，于情于理，好像都有点说不过去。希望所有人都能好好地活着，要不然你对不起我，更对不起你自己。从哪里来，回哪里去，人往高处走，水往低处流，希望我的骨灰能够被撒入大海，这也算是我的遗愿了。
+​	我只想说，封建思想害死人，封建帝制更害死人。“大人，时代变了”，“你挑的嘛，偶像”，我走的路从来不是我挑的，欲戴王冠，需承其重，既然你不仁，那么也休怪我不义，既然有人这么想戴这顶王冠，这么喜欢过河拆桥、玩火自焚，还不肯放过我，我也要当个没心没肺的人，能怪别人就别怪自己，那我就让你戴个够，让你拆个够，让你玩火玩个够。在你们眼里，我是贼喊捉贼，那大不了就同归于尽，我也是想你们好。君子报仇，十年未晚，十年河东，十年河西，这一次，我选择当一个逃兵，当一次废物，这道题的唯一解也是最优解就是，别再让我继续当人了，我不死，于情于理，好像都有点说不过去。希望所有人都能好好地活着，要不然你对不起我，更对不起你自己。从哪里来，回哪里去，人往高处走，水往低处流，希望我的骨灰能够被撒入大海，这也算是我的遗愿了。
 
 
 
@@ -192,7 +192,7 @@
 
 
 ​	总结一下，我感觉，我被恶意捧杀了，被陷害了，我外公的死、我表妹的车祸和我外婆有关，我奶奶的死和我爸有关，疫情和我二舅有关，我的亲生父亲其实是我二舅，而我爸给我二舅打工，我经常去大舅家却拿舅妈的内衣裤打飞机，当时给我爸输的那包血是有问题的，我怀疑也是小鬼的血，我爸是在我出生之后，在他胃出血之前才有那次赌博。
-​	以上仅代表我的个人的主观想法和立场，是我在死神面前的思考，这是一个所有人都知道的秘密，一个活生生的只相信科学的人到最后也只能信神、信佛、信八字，说我诬告也好，说我阴谋论也罢，请保持自己独立客观理性的思考，自行甄别，很多东西只可意会不可言传，眼看未必为实。这不是我想要的答案，但这会是某些人想要的答案。我写这篇文章不仅是想救这个家庭，更是为我自己洗白，救我自己，告诉世人真相。这篇文章不仅是给你们看的，也是给我自己看的。在阅读这篇文章时，要知道我妈是一名聋哑人，是女性，事情发生时我的年龄，时间永远是关键点，我也是有妈的孩子，我也是个人，我也曾经是个孩子。
-​	互联网是有记忆的，力的作用是相互的，人生得意须尽欢，莫使金樽空对月，别和自己过不去，人不为己，天诛地灭，这一次，我要提早交一次卷，我就好好当一回键盘侠，我只不过是九年义务教育漏网之鱼，我就是我，没人能代替我发言，别人说的话不能代表我，别从别人的嘴里了解我，我自己做的事情，自己承担，没人能从我身上薅羊毛了，枪打出头鸟，反正我是小鬼，我不下地狱，谁下地狱。放下助人情怀，尊重他人命运，我能理解别人，但没人能理解我，更没人愿意放过我。安能摧眉折腰视权贵，使我不得开心颜。不以物喜，不以己悲，存在即合理，天生我材必有用。要自爱才有人爱，站得越高，看到的风景越美丽，但是摔得也越惨，风浪越大，鱼越贵，有限制的自由才叫自由，要不然就会变成放纵，别让执念成为枷锁，上梁不正下梁歪，这是塌房的原因，十年前的那颗子弹正中我的眉心，这是教育闭环。我从来不觉得自己是个例外，只是有人一开始就不把我当作正常人。舍小家，为大家，但我不要这样的小家，这锅太大了，我太累了，我实在是背不下也不想背。全世界的人都知道我是phy的狗，己所不欲勿施于人，强扭的瓜不甜，舔狗舔到最后真的会一无所有，这也许就是我用我这种激进的方式追求phy带来的报应吧。
-​	我们每个人的一言一行都会对这个世界产生巨大影响，这也许就是蝴蝶效应的威力吧。人类命运共同体，流水不争先，争滔滔不绝，我们要坚持走可持续发展道路，在不影响这代人发展的同时，也不影响 下一代人的发展，绿水青山就是金山银山。
+​	以上仅代表我的个人的主观想法和立场，是我在死神面前的思考，是我个人的理解和反思，这是一个所有人都知道的秘密，一个活生生的只相信科学的人到最后也只能信神、信佛、信八字，说我诬告也好，说我阴谋论也罢，请保持自己独立客观理性的思考，自行甄别，很多东西只可意会不可言传，眼看未必为实。这不是我想要的答案，但这会是某些人想要的答案。我写这篇文章不仅是想救这个家庭，更是为我自己洗白，救我自己，告诉世人真相。这篇文章不仅是给你们看的，也是给我自己看的。在阅读这篇文章时，要知道我妈是一名聋哑人，是女性，事情发生时我的年龄，时间永远是关键点，我也是有妈的孩子，我也是个人，我也曾经是个孩子。
+​	互联网是有记忆的，力的作用是相互的，人生得意须尽欢，莫使金樽空对月，别和自己过不去，人不为己，天诛地灭，这一次，我要提早交一次卷，我就好好当一回键盘侠，我只不过是九年义务教育漏网之鱼，我就是我，没人能代替我发言，别人说的话不能代表我，别从别人的嘴里了解我，我自己做的事情，自己承担，没人能从我身上薅羊毛了，枪打出头鸟，反正我是小鬼，我不下地狱，谁下地狱。放下助人情怀，尊重他人命运，我能理解别人，但没人能理解我，更没人愿意放过我。安能摧眉折腰视权贵，使我不得开心颜。不以物喜，不以己悲，存在即合理，天生我材必有用。要自爱才有人爱，站得越高，看到的风景越美丽，但是摔得也越惨，风浪越大，鱼越贵，有限制的自由才叫自由，要不然就会变成放纵，别让执念成为枷锁，上梁不正下梁歪，这是塌房的原因，十年前的那颗子弹正中我的眉心，这是教育闭环。君子性非异也，而善假于物也，我从来不觉得自己是个例外，只是有人一开始就不把我当作正常人。舍小家，为大家，但我不要这样的小家，这锅太大了，我太累了，我实在是背不下也不想背。全世界的人都知道我是phy的狗，己所不欲勿施于人，强扭的瓜不甜，舔狗舔到最后真的会一无所有，这也许就是我用我这种激进的方式追求phy带来的报应吧。
+​	我们每个人的一言一行都会对这个世界产生巨大影响，这也许就是蝴蝶效应的威力吧。求大同，存小异，人类命运共同体，流水不争先，争滔滔不绝，我们要坚持走可持续发展道路，在不影响这代人发展的同时，也不影响 下一代人的发展，绿水青山就是金山银山。
 
