🎉auto update by Gmeek action

--- a/backup/新冠的真实原因.md
+++ b/backup/新冠的真实原因.md
@@ -138,7 +138,7 @@
 
 ​	鹤蚌相争，渔翁得利，螳螂捕蝉，黄雀在后，我外婆大概就是这渔翁和黄雀吧，我外婆利用了我内向、不爱与人交谈的特点，为自己铺了一条升仙路。解铃还须系铃人，这本是我妈和我二舅的战争，遭殃的却是我。现在想想，其实我外婆说谎也不是没有破绽，有一次她和我说，我和我姐借书给邻居，结果邻居把书弄破了，邻居说我和我姐小气，不肯再借书给他们，我当时以为这是我姐借给了他们，就没有太在意。我外婆和我说，我二舅的成功，是拿命换的，原来是这个意思，自己淋过的雨，也要让别人也淋一遍。我外婆和我说，我妈帮不了我什么忙，要报喜不报忧，我才事无巨细地和她说。
 ​	我发病后，我和我爸经常吵架，吵架中提到的舅舅，我说的，我爸理解成是我二舅，我爸说的，我理解成是我大舅。我爸问我，我垃圾桶里的纸是什么回事，其实不全是我打飞机用的，我是油性肤质，不是每天洗澡，有些纸巾是我拿来擦油脂用的。有一次，我不肯吃他给的药，他用手指很用力地推了我的头，说，不是家里人对我有偏见，而是我本身就有问题，我很没有良心，我曾经在微信说“带着偏见的沟通不能算是沟通”，所以偏见是存在的，我说的偏见是指，我有一个不能说话的母亲，还有一个这样的父亲，我想我爸理解的偏见是指我是小鬼吧。有一次，他把我比作林彪，说我在害人，在我理解，那他就是在说自己是毛泽东咯？
-​	文学巨匠鲁迅到最后发现，弃医从文救不了人，我想，他大抵是正确的。偏见是人们心中的一座大山，谁也休想搬动它，起码我不行，在法律上，人人平等，但是在人心里，那可未必。从我掌握的信息看，我是文曲星下凡出生，因为车祸而死亡，轮椅也是车。有一句话说得很好，世间很美好，但下次我不会再来了。当社会问题聚集在一起，并将其具象化，可以很清楚看出这个社会到底需要什么。从我的人生可以窥见很多问题，比如阶级矛盾问题，霸凌问题，性教育问题，男、女权问题，家风家教问题等等。
+​	文学巨匠鲁迅到最后发现，弃医从文救不了人，我想，他大抵是正确的。偏见是人们心中的一座大山，谁也休想搬动它，起码我不行，在法律上，人人平等，但是在人心里，那可未必。从我掌握的信息看，我的八字说，我是文曲星下凡出生，因为车祸而死亡，轮椅也是车。有一句话说得很好，世间很美好，但下次我不会再来了。当社会问题聚集在一起，并将其具象化，可以很清楚看出这个社会到底需要什么。从我的人生可以窥见很多问题，比如阶级矛盾问题，霸凌问题，性教育问题，男、女权问题，家风家教问题等等。
 
 ​	我会增加工作量？为什么不是增加工作岗位呢？对于中国现在的发展，我感觉有当年大跃进的味道，有点脱离了社会主义核心价值观，我们不要自欺欺人。
 
