🎉auto update by Gmeek action

--- a/backup/新冠的真实原因.md
+++ b/backup/新冠的真实原因.md
@@ -2,7 +2,7 @@
 ​	我还是婴儿的时候，有一天晚上，我不知道为什么，哭闹得很厉害，我爸把我举到二楼阳台外的空中，大吼：“你再哭！“。我奶奶还在一楼睡觉，听到动静后，跑出来制止我爸，我爸才善罢甘休。
 ​	我爸经常在我和姐姐面前光着身子溜达，甚至在我们面前和我妈啪啪啪。
 ​	在我几岁的时候，大夏天的，我的堂姐梁嘉玲就抱着我盖着被子啵嘴，堂姐梁翠玲则负责“望风”。
-​	一年级时，我猥亵了一名名叫吴玉丽的女孩。我在男厕所前抱着她强吻。后来，三年级的时候，我们分班了。高一的时候我和她在同一个班级，和我玩得很好的同学黄日宇喜欢上了她，我就帮他追求她。别的班级的一位男生也喜欢上了wyl，叫一位比hry还要强壮的男生在食堂撞了hry，然后我叫彭志豪帮忙“出气“，但没有碰过他一根毛发，在走廊上在课间拦住他，问清楚他是什么情况，当时闹得很厉害，很多人都围过来吃瓜，但也是几分钟的事。后来wyl就和那位同学在一起了，我和hry同学就玩得不是那么好了。后来我复读的一天，撞了hry的那位同学在打球时，不知道什么原因突然倒地动不了了，学校隔壁医院的救护车赶来的时候，他已经心脏骤停去世了。
+​	一年级时，我猥亵了一名名叫吴玉丽的女孩。我在男厕所前抱着她强吻。后来，三年级的时候，我们分班了。高一的时候我和她在同一个班级，和我玩得很好的同学黄日宇喜欢上了她，我就帮他追求她。别的班级的一位男生也喜欢上了wyl，叫一位比hry还要强壮的男生在食堂撞了hry，然后我叫彭志豪帮忙“出气“，但没有碰过他一根毛发，在走廊上在课间拦住他，问清楚他是什么情况，当时闹得很厉害，很多人都围过来吃瓜，但也是几分钟的事。后来wyl就和那位同学在一起了，我和hry同学就玩得不是那么好了。后来我复读的一天，撞了hry的那位同学在打球时，不知道什么原因突然倒地动不了了，学校隔壁医院的救护车赶来的时候，他已经心脏骤停去世了。其实小时候我跑步也很厉害，可惜千里马常有，而伯乐不常有。
 ​	二年级暑假的时候吧，有一天，我爸突然呕吐和晕倒，摔破了下巴，我母亲赶紧把他送到红峰农场医院治疗，第二天早上，他喊我和母亲把他从床上扶起来，结果他刚坐起来就开始吐血，吐得真的可以说是血流成河，那场面我至今难忘，我和母亲都吓呆了，我姐姐就跑到隔壁邻居家喊人帮忙，按照我外婆说，她当时喊和她差不多大的和她玩得很好的一个女孩帮忙，那个女孩才叫她家人帮忙的，我爸一开始被送到红峰农场医院治疗，结果他还是吐血晕倒了，我奶奶都急哭了，然后他才被送到化州市人民医院治疗，但是化州市人民医院一开始见了我爸是拒收的，得知我二舅是在食品药品监督局当过官的才收的，我二舅还叫人送了一包血才把我爸救回来的，我爸经过很长时间的检查才查出来是胃穿孔。
 ​	三年级，莫名其妙的，我一个人被调到其他班级了，在那个班级，一开始我经常欺负我的同桌，后来调座位，我认识了彭海莹，还有很多其他小伙伴。
 ​	五年级吧，有一天晚上，我和小伙伴们玩耍，被一个叫彭俊宇的同学追赶时，被他用一条竹棍砸了我的左眼，他还让我别告诉老师，当时他比较能叫人，所以我就听了他的。
@@ -49,7 +49,7 @@
 ​	大一，我被分到190114班，宿舍在学校北区23栋710，1、2、3、4号床位分别是我、黄耀楠、李庭辉、甄树源，学校本来是让所有1号床位的人做舍长的，我嫌麻烦就让他们做舍长了，最后让zsy做了舍长，我的床位和zsy的是相对面的，我的离厕所更近一些，他经常和我争晾衣服的位置，我晾哪里他就跟着我晾哪里，经常我干了的衣服被他湿的衣服弄湿，更过分恶心的是他把自己的内裤、袜子贴着我的毛巾晾。Zsy还经常特殊照顾我，比如经常在我去隔壁宿舍玩时拿钥匙锁门，穿鞋时拿椅子撞我，别的室友大便时我一打开门通风他又立马关上，大一时我想学编程，一天晚上我因为看不见键盘的按键就打开了我座位上的灯，结果他让我关了说他要睡觉，后来我买了台灯他又嫌我的台灯太亮了，他还故意将自己的台灯光源对准我的床位，或者打开自己座位的灯管出门也不关。有一次，我刚洗完毛巾，我和hyn、lth去上课了，结果回来时发现毛巾掉了下来了还全是苔藓，zsy还特意和我说，我毛巾掉到阳台洗衣机后面的地上了。当时我和zsy的矛盾很深，以至于大三时让辅导员调解，在辅导员面前，他什么也不认或者说是我这么对待他才以同样方式对待我的，其实事实是我很少和他说话，甚至我都不想理会他。和他在辅导员的调解后，我问我的毛巾是谁捡起来的，结果没一个人承认，包括zsy。调解我和zsy的矛盾的辅导员是何欣颖和谭鹏老师，当时是在食堂调解的。我先是给负责为学校的同学解决困惑的人发了一条吐槽zsy的消息，他把我发给他的消息发到了朋友圈，然后我把这条朋友圈截图发给了何欣颖，何欣颖把我的截图发给曾美娴了吧，wzy问我是不是找辅导员了，我说没有，当时何欣颖已经不是我们的辅导员了，下午我联系了曾美娴，和她语音通话时，我控制不了情绪对她发火了，她说我威胁她，hyn事后问我要不要给她道歉，毕竟曾美娴刚做我们的辅导员，不了解情况，问我不怕曾美娴给我穿小鞋么，我说不怕。
 ​	大一下学期，我们分方向了，zsy选择留在190114班，而我、hyn、lth去了190723班。大一时，我们的辅导员是陈俊颖，20年初还到我们家家访，到了190723班后，我们的辅导员变成了何欣颖，大三我们的辅导员变成了曾美娴，现在曾美娴在学校党委工作吧。我“得了“多发性硬化后，我因为在经济上被逼得走投无路了，就找了曾美娴，她让我写一份报告给她，她说她自己也写了一份报告。
 ​	大三，一天晚上，我用茂名号码给phy打了两个电话，她没有接，pzh有我的茂名号码，当时我给phy打的电话是在她的QQ个性签名找的，因为我没有她的联系方式，只记得她的QQ，后来pzh给我打了一个电话，问我大晚上找phy干嘛，我说谎说是我和伙伴们喝完酒后玩真心话大冒险给她打的，我担心pzh会报复我，就在网上找了一个女生，给了她50块钱，录了一段视频给他道歉，我说我是想给phy道歉才给她打的电话，其实我是想她了，想问她过得还好吗，想听听她的声音，我想告诉她，其实我好想你，我想给phy道歉是真的，因为我追求她时经常给她发消息，当时觉得我给她太大压力了，困扰了她，我说的困扰是这个意思，有人却理解困扰是因为以为我知道我是小鬼给她带来了困扰的缘故。当时phy和pzh是情侣关系吧。后来hzc给了我500块钱，还说我没钱用了可以找他。
-​	我是大四寒假和hwc去玩后那次发烧发病的，一开始是在茂名中医院治疗的，当时的激素药是地塞米松，我的主治医生叫叶劲松，一天晚饭后，我爸硬要我喝我外婆给的茶水，我不喝，躺在病床上玩手机，我爸就过来抢我的手机，结果抢不过，我刚做完腰椎穿刺手术不久，他就把我的脚弯到我头上打我，我就一脚把他踢开，他到处说是我打了他，第二天，我发脾气了，不肯吃药打针，事后，叶医生还和我说，你不要怪你老爸哈。做腰椎穿刺手术时，我爸还和叶医生吵了一架，对他说了粗口。下学期，我休学了，到粤嵌学习，想着早点学完在粤嵌的课程，然后出来赚钱治好我的病。我在广州粤嵌，听了辅导员和叶医生的建议，去了中山一院看病，一次发作后，我的激素药变成了醋酸泼尼松，去医院前的早上，我摔了一跤，当时我在洗电饭锅锅胆，锅胆也摔在了地上，声音贼大，但是我的室友都说没听到，是wlx陪我去的医院，当时医院没床位了，我们要在急诊留院观察等床位，结果就过了一天晚上就有床位了，别人等了一个月也等不到床位，其实我们是可以选择去其他医院的，但是我不想再麻烦wlx陪我跑来跑去，而且这里几乎是全广州最好的医院了，于是就留了下来，同病房的病友还问我是怎么约到的床位，我还说幸运，那次发作，我刚好错过了毕业照。我回学校办理休学，比我大一届的曾经的部长苏国碧，说自己在学校复习二战考研，在当外卖员赚钱当生活费，自己在推销电话卡，我为了帮他，就去办理了一张，在办理时，我还特意和办理的人说我是苏国碧部长介绍过来的，办理的人把我的证件拿去复印时，不是在我面前复印的，而在我面前，就是一台复印机。休学后，我没有把自己的所有东西搬离宿舍，我的伙伴们在我的位置上养仓鼠。
+​	我是大四寒假和hwc去玩后那次发烧发病的，一开始是在茂名中医院治疗的，当时的激素药是地塞米松，我的主治医生叫叶劲松，一天晚饭后，我爸硬要我喝我外婆给的茶水，我不喝，躺在病床上玩手机，我爸就过来抢我的手机，结果抢不过，我刚做完腰椎穿刺手术不久，他就把我的脚弯到我头上打我，我就一脚把他踢开，他到处说是我打了他，第二天，我发脾气了，不肯吃药打针，事后，叶医生还和我说，你不要怪你老爸哈。做腰椎穿刺手术时，我爸还和叶医生吵了一架，对他说了粗口。下学期，我休学了，到粤嵌学习，想着早点学完在粤嵌的课程，然后出来赚钱治好我的病。我在广州粤嵌，听了辅导员和叶医生的建议，去了中山一院看病，一次发作后，我的激素药变成了醋酸泼尼松，去医院前的早上，我摔了一跤，当时我在洗电饭锅锅胆，锅胆也摔在了地上，声音贼大，但是我的室友都说没听到，是wlx陪我去的医院，当时医院没床位了，我们要在急诊留院观察等床位，结果就过了一天晚上就有床位了，别人等了一个月也等不到床位，其实我们是可以选择去其他医院的，但是我不想再麻烦wlx陪我跑来跑去，而且这里几乎是全广州最好的医院了，于是就留了下来，同病房的病友还问我是怎么约到的床位，我还说幸运，那次发作，我刚好错过了毕业照。我回学校办理休学，比我大一届的曾经的部长苏国碧，说自己在学校复习二战考研，在当外卖员赚钱当生活费，自己在推销电话卡，我为了帮他，就去办理了一张，在办理时，我还特意和办理的人说我是苏国碧部长介绍过来的，办理的人把我的证件拿去复印时，不是在我面前复印的，而在我面前，就是一台复印机。休学后，我没有把自己的所有东西搬离宿舍，我的伙伴们在我的位置上养仓鼠。大三有一天晚上，我平躺睡觉，我的右手整个手臂不知道为什么发麻了，于是右手打了自己一巴掌，把我打醒了，我看了一下四周，发现没有人，又睡了。
 ​	我在粤嵌的舍友是汪礼星、冯文杰、黎展飞和唐伟鑫，有一天twx问我借蒸蛋器，被我拒绝了，结果他就开始特殊照顾我，经常把垃圾扔在我做饭的桌子上，每天早上他都是最后一个离开宿舍的，经常把晾衣杆放在门后面，谁要是一打开门，晾衣杆就会被碰倒，然后卡住门以至于打不开门，知道我腿脚不方便，就把自己的垃圾桶或者大饮水瓶放在我下床的梯子下，把自己的水桶放在我做饭的桌子前，更恶心的是往我晾在阳台的雨伞里倒水，我的雨伞就没有一天是干的。有一天他们一起喝酒，twx躺在床上还吐了，呕吐物都在他脸上，现在后悔是我提醒fwj他们帮忙清理这件事，我还打扫了卫生，是我把他拉进我们宿舍的。23年春节后，我回粤嵌学习，想着快点学完粤嵌的stm32的课程然后做毕业设计来着，趁着他们没回宿舍，我因为宿舍卫生太脏了就把宿舍水洗了一番，结果第二天我就发烧了，我以为自己是太累了导致的心肌炎复发了，就没有太在意。我用看多发性硬化的钱去看了男科，先是找邓春华教授，我说我想检查一下我的泌尿系统，他给我开了尿液检查和精液检查，还有一个热成像检查，就是让我全裸站在一个镜头前做各种动作，邓春华教授算是男科界的翘楚，后面找了伍新林教授开了中药调理，我一开始是找他开中药治多发性硬化的，他说中药在这个病上起效非常慢，建议我还是找回西医好，给我开的中药是用来调理身体其他方面的，我喝了他的中药后，第二天我就头晕目眩，呕吐不止，然后我就没有继续喝他开的中药了。
 ​	Wlx和fwj经常呆在宿舍打游戏不去上课，大喊大叫，搞得我静不下心来在宿舍学习，而我当初选择来粤嵌的原因之一，就是想有一个安心学习的环境。在宿舍学习，是我特意向班主任申请的，这样我就不用在宿舍和教室来回跑，不用经常危险地爬楼梯。
 ​	Hyn和fwj经常怂恿我和室友打架，说室友肯定打不过我，打架时会帮我。我经常和wlx出去吃饭，他说，过马路时他会为我挡车，现在想想，幸亏自己没听他的。
@@ -69,7 +69,7 @@
 ​	小p在微信群调侃：做人有人爱，做爱有人陪，和我说看不起我。我打过电话给pzy，求他放过我，我想问他拿pzh的电话号码道歉，他和我说，他和pzh是同一条村子的，他在打篮球没空，我也打过电话给我二舅，他说家人是最大的佛，不要提过去，一切向前看，让我加他的微信，给我发了一条视频，大意是说只有舍得放弃最重要的东西，才能有回报，才能变成有钱人。2024年2月12日也就是大年初三，这天我自杀了，但是被我姐阻止了，她先是打110报警，然后120把我拉到了化州市人民医院，结果什么药也没开，我姐付了吸氧（吸阳）的钱就离开医院了，在我被送上车时，我看见一个应该是农场领导的人在打电话，看着我被送上车，我猜他是在和我二舅打电话吧，他们和我说，去其他医院看，我以为是去看阳痿的，我就同意了，结果我被送去了化州市志光精神病院，就这样我被扣上了精神病。我自杀后，我舅妈打了一个微信电话给我，说，不要再干这种傻事了。那天我爸村子刚好有祭神活动，有人上刀山，结果没站稳摔了下来，头部撞到桌角去世了。我自杀后，我把电脑pin密码改为了hwcQQ的后四位，第二天，我外婆就和我说，hwc不在警察局干了，调到警察厅了。马思纯那个视频里说，继续演戏，真是盐都不带盐了。我进了一个叫“到坟店咯”的微信群，我自杀没成功后，wxh又把我拉进了群。在我被送去精神病院的路上，csw和hyn打了我的茂名手机号码19868358768，hyn的手机号码尾数是168，但在我印象中，我没有和他们透露分享过我的这个手机号码。
 ​	回家后几天，我和我姐下到旁边公园的一条路晒太阳，一个老奶奶骑着自行车过来，停在我们旁边，下车后在一棵树上做了几个引体向上就走了，我外婆刚好买了眼药水给我，那个地方就是当时我约phy见面的地方，我猜那个老奶奶就是phy的奶奶吧，我外婆和我说，zh快要结婚了，海哥老爸出事了，海哥在照顾他老爸，我看见朋友圈有人转卖演唱会门票，其中有一张上面写着p排p座，我打电话给那个人，和他讨价还价，他说他买来一张票是1680块钱，我想了一下微信的余额，说，还是算了，能力有限，我和我姐回家时，我外婆对我说，不要再出来害人了，不要再出声了。我在我外婆的说法下，没有再吃药，然后就复发了。
 ​	我颈椎痛，我爸用发臭的消肿止痛酊给我擦，贴了我二舅给的药膏，我痛得受不了，吃了4片激素，然后擦了我妈从医院带回来的药膏，后来我不肯再去高州人民医院，我爸听了我外婆的话，和我去了茂名人民医院，在做CT时，我和我爸说颈椎痛，让他别碰我颈椎，结果他更起劲了，茂名人民医院建议我到中山三院打单抗，开了一盒吗替麦考分支胶囊，住了一两天院就回家了，当时和我同一个病房的大叔，头戴着一顶鸭舌帽，上面写着“渔业保护协会”。贴了我二舅给的药膏，我因为过敏就没有再贴了，我的颈椎很痒，我爸就拿过期了的药膏给我擦，结果更痒了，我说用清水洗一下，他不肯，说我不让他用艾草水洗。我教我爸网上购物，结果我接了一个陌生电话，问我是hua mei不，我说不是，然后他就挂了。我妈瞅着我爸，一脸嫌弃，我看向她，她才急忙转移眼神。我在网上购物，和商家聊天，不论我发什么，那边都只回复一个句号，我现在理解的意思是说我完了。
-​	后来在中山一院住院，同病房的病友中有一个患有乙肝，几天后我就昏迷进ICU了，在ICU我插了胃管、尿管，做了气切，打了利妥昔单抗，等我彻底醒来时，我就转到广东省第二中医院黄埔院区了。我自杀前几天问我爸关于我身世的事，他没有明说，是我自己推理出来的，其实我的亲生父亲是我二舅。
+​	后来在中山一院住院，同病房的病友中有一个患有乙肝，几天后我就昏迷进ICU了，在ICU我插了胃管、尿管，做了气切，打了利妥昔单抗，等我彻底醒来时，我就转到广东省第二中医院黄埔院区了。我自杀前几天问我爸关于我身世的事，他没有明说，是我自己推理出来的，其实我的亲生父亲是我二舅，他说，他从来没有主动 给我二舅打过电话，是我二舅给他打的电话。
 ​	在广东省工伤医院，我的主治医生姓潘，“得了”精神病后，我姐说我已经不能独立思考、独立做决定了，所以我的用药都是听他们的，有一次发烧，潘医生给我安排了质量比较好的抗生素，我忘了我爸问我什么了，我说我忘了，我爸跟着说，他上厕所了，把我一个人放在轮椅上坐，我因为脖子用不了力，头往后倒了，等他上完厕所时，我的脸都紫了，我是被抢救过来的，其实我根本没忘。
 ​	我爸在医院照顾我时，本来广东省工伤医院的护士给了一张带有手写康复建议的康复方法纸，我爸嫌占用他的时间，就在我在广州慈惠医院住院期间把那张纸给扔了，还是当着我的面丟的，他还骗我姑说自己早起做早餐，有一天不给我吃午饭还故意在我面前炫耀自己吃午饭的样子，那天我忍不了就报警了，之后我的药里就多了一款控制精神的药物。我刚从ICU出来时，转到了广东省第二中医院黄埔院区，我爸和我姐晚上轮番照顾我，我做了气切手术，我刚吃完补肾的中药，他们给我吸痰，吸了很多次，最后我吐了，连胃管都吐出来了，护士看了都忍不住说，我才刚吃完中药就给我吸痰，还吸那么频繁，看上去很和睦，现在在我看来，我爸和我姐却有100个心眼，他们在道德、法律与利益两者之间反复横跳，但我想说，鱼和熊掌不可兼得，眼看未必为实。我爸用我的剃须刀给自己剃了胡须后又给我剃，或者给我剃完胡须后又拿这把剃须刀给自己剃，刚上大学时，zsy因为没有剃须刀问过我要剃须刀，我没借给他。
 ​	在中山三院打完利妥昔单抗后，我被转到了广东省第二中医院越秀院区，是我的主治医生安排的，是在嘲讽我越来越秀，说我没懂意思，是不可能的。在广东省第二中医院越秀院区住院时，护士一天早上过来量血压，和我说我的血压是110/72，和隔壁床说的是“你的血压正常”，我理解的意思是想要我在72小时内打110报警。我姐曾经的手机铃声是《南山南》，我用江门号码打过她后就换了。
