--- a/backup/深度调查：一场颠覆认知的病毒溯源博弈——科学、政治与伦理的三角困局.md
+++ b/backup/深度调查：一场颠覆认知的病毒溯源博弈——科学、政治与伦理的三角困局.md
@@ -96,7 +96,7 @@
 ​	他在2024年10月24日封了气切，是在广州慈惠医院封的，yjy主任安排了一个女医生做他的主治医生，叫王烨，那个医生可能没什么经验吧，他到现在也不能流畅得说话，但是手术时yjy主任和她都在，没有抽气囊就给他封了，这是一句“这是一场医疗事故”就能摆平的事。
 ​	他姐和他爸经常想用激将法PUA他去做高压氧，他说了无数次他左半边肢体用不了力就是高压氧造成的，他们还要坚持要他去做高压氧，有的人现在想他死，又怕他死太快，想慢慢折磨他死，能不能给个痛快，人固有一死，他不怕死又怕死，怕自己死得没有价值。如果改革必须经历鲜血的洗礼，他愿意付诸全部。
 ​	在广州慈惠医院，他做了好几次高压氧，做完最后一次高压氧转去孙逸仙医院后，他的左半边肢体用不了力了，他爸在照顾他时说，不是你死就是他死。他爸在给他按摩脚时，握着他的脚掌抬起他的脚，他说膝盖痛，他爸说痛也要按，扶他练习站立时，他说他腰椎痛，他还硬要坚持左右摆动他的上半身体，他连杠杆原理都不懂，他爸连因人而异、条件反射都不懂，他意识到了教育的重要性，因材施教的重要性，他爸是小学文凭，他说的痛是物理上的痛，他爸理解成这是病理上的痛。他爸是个很倔强的人，做什么事情都很固执，他做什么事情都要听他爸的，比如他的腰现在用不了力，站不起来，他爸还硬要他站，他的左手弯曲不了，他爸硬要拍打他的手，搞得他的手不但弯曲不了还痛了起来，这也许也是他这种性格形成的原因。他现在就像洋娃娃一样被人捏在手里，他的命被捏在了别人手里，像社会巨婴，衣来伸手，饭来张口，别人让他干嘛他就得干嘛，所谓人为刀俎，我为鱼肉，很没有安全感，活得完全没有颜面，没有人权。他怀疑他被非法软禁了，但是他又没有证据，他是填鸭式教育的受害者。父母永远是最爱自己的孩子的人，但现在看来，那可未必。
-​	Hwc在《使命召唤》这款游戏的昵称是killer_1997，而他姐就是1997年出生的，按农历算，她出生于牛年牛日牛时辰，他想这已经很明显地提醒他，其实最想弄死他的人是他姐吧。他姐说她自己能照顾好这个家庭，然后他说最好能嫁给这么有能力的人，他姐说他在诅咒她。他吃的醋酸泼尼松是信谊牌的，他二舅在信宜这个地方当过官，高州人民医院给他开的醋酸泼尼松是海王牌的，这是在暗喻他是海王呗。
+​	Hwc在《使命召唤》这款游戏的昵称是killer_1997，而他姐就是1997年出生的，按农历算，她出生于牛年牛日牛时辰，他想这已经很明显地提醒他，其实最想弄死他的人是他姐吧。他姐说她自己能照顾好这个家庭，然后他说最好能嫁给这么有能力的人，他姐说他在诅咒她。他吃的醋酸泼尼松是信谊牌的，他二舅在信宜这个地方当过官，也做过好像是茂名市食品药品监督局还是卫生局的局长，高州人民医院给他开的醋酸泼尼松是海王牌的，这是在暗喻他是海王呗。
 ​	在去广州看病前，他在高州人民医院住过院，第二次住院时，他的主治医生是吕江华医生，ljh给他注射的激素用法超过了普通患者的用法，还建议他去孙逸仙医院找一个姓闩的医生看，他给他介绍这位医生时，说他姓阎罗王的阎。
 ​	他刚开始去中山一院，是黄鑫教授给他看病的，说他是视神经脊髓炎，后来他的主访医生变成了冯慧宇教授，冯慧宇教授第一次给他看病时，困惑为什么他的腰穿结果里没有寡克隆带的结果，那张关于他的寡克隆带结果的图是他后来问他爸拿的，冯慧宇教授觉得他是多发性硬化，让他吃了氨吡啶缓释片，还让他联系一个好像叫廖奋春的医药代表打奥法妥木单抗，lfc还和他说，办理残疾证能报销很多钱，残疾证的等级越高越好，残疾人报考公务员会有优待，但是在他办理残疾证时才知道，三级残疾证往上会影响找工作，后来他把证件等资料寄给过lfc，lfc说他可以帮他拿药，然后寄给他，他当时因为不知道自己究竟是多发性硬化还是视神经脊髓炎，而且当时纳入医保用来治疗视神经脊髓炎的药物非常少，次年有新的药物纳入医保治疗视神经脊髓炎，lfc问他用不用药时，他犹豫不决，lfc还调侃他用不起次年的新药，他就把证件寄给了lfc。他现在怀疑他爸给他的那张图是p的。他也去过邱伟教授那里看过，qw教授并不建议他吃氨吡啶缓释片，冯慧宇和邱伟教授都差不多是整个广州在这个疾病研究上最权威的医生了，但是冯慧宇教授的普通门诊挂号费是30元，而邱伟教授只有特殊门诊，挂号费是300元，他为了省钱就把冯慧宇教授当作他的主访医生了。
 ​	“得了”多发性硬化后，因为后期医疗费高昂，他打电话给pzy寻求学校的帮忙，pzy让小p帮他筹款，结果他刚在水滴筹上注册账号，就有人给他打电话了，说自己是高州人民医院的，小p让他联系他给的微信，说是北京的，是一女的，他信了小p的，现在想想，也许跟他联系的那个人是他二舅安排的，小p让他联系的，可能是通过变音器和他聊天的。勿以恶小而为之，勿以善小而不为，日防夜防，家贼难防，兄弟是拿来出卖的，未经他人苦，莫劝他人善，出来混迟早要还的。是pzy让小p帮他弄水滴筹的，那天和小p到他家和他谈这件事的还有pjl、lkj、wjh，小p问他要不要他帮他写文案，他说不用，lkj、wjh算是hwc的死党，pjl应该喜欢hwc。
@@ -168,7 +168,7 @@
 
 ​	近日，他做了一个梦，说他考研上岸了，但是被别人陷害，去不了报道了，被陷害的不止他一个人，他们在上课，其他一个人举报了那个实施陷害的人，最后那个实施陷害的人被警方抓获了，那个实施陷害的人被警察带走时还对着他们笑，他看不顺眼就上去和那个人对线，最后老师拉开了他，说只要他们在学校名单里就行，可惜这是梦。
 ​	这一切都是巧合，你信么？反正他不信，他感觉他头上长摄像头了。
-​	他不知道他妈背着他干了什么关于他的事，但如果非要站队，他只能说，他的经历逼着他只能站在他妈这边，他的经历逼着他只能这么做。
+​	他不知道他妈背着他干了什么关于他的事，经历了什么，但如果非要站队，他只能说，他的经历逼着他只能站在他妈这边，他的经历逼着他只能这么做。
 
 
 
@@ -187,7 +187,7 @@
 ​	他感觉他爸在他的餐饮中下药，因为他喝白粥感觉到白粥带有苦味，他猜测给他下的药不是单独起作用的，是和他的现在用药一起作用起效的，他吃的药都是他姐寄快递寄的，他吃药都是他爸拿给他的，因为他动不了，就右手勉强能动，拿不了药。他觉得他爸已经发现他发现了这件事，会在他自己开的、经常喝的中药中下药，他的肚子已经开始痛了。他妈很单纯，单纯到以为凭一己之力就能改变这个世界，她用他外婆养育她的方法养育他。他妈觉得全世界都像他外婆一样爱她，全世界都想她好，她以为把他当小鬼养育就是为他好。他爸现在在家照顾他，但是每次给他按摩时，他爸都一脸嫌弃和不耐烦，帮他做康复时，他痛得不行，他爸说他这点痛都受不了，说他不肯锻炼，说他懒，在他面前炫耀自己能跑能跳的样子，他真的好无语，他变成这样不是他爸搞的嘛，他要是没做高压氧会变成这样，他爸要是没有给他下药，要他爸这么辛苦照顾吗？他爸给他做康复时，他说痛，他爸还硬要给他按摩，想尽量表现自己仁爱的一面，明知道做的已经是无用功，却还是故意而为之。他爸不想在家照顾他，却又不想出去辛苦工作，在道德、法律与利益之间反复横跳。他爸一边给他下药，一边说他不肯锻炼，说他懒，只想享受。他做了气切手术，现在都不能说清楚话，每次说话，他爸都会说自己听不清楚他在说什么，但是他连周围有蛇吐舌头的声音都听得清楚。他的左手弯曲不了，他爸就按照网上正常人的视频使劲拍他的手，完全没有科学依据，不懂得什么叫因人而异，这也反映了网络乱象吧。有一次，他不肯再吃药，他妈写字和他说“只要坚持，未来一定越来越好”，他想这句话是他姐教他妈的吧。他爸给他做康复运动时，硬是搞痛他或者他说他哪里不舒服时，他爸硬说是因为他不吃药才痛的，硬要他吃药。他爸在他的枕头下塞了一本《金刚经》，在他睡觉的垫子下还多了一张被子，再下面是床垫，他平常打电脑的墙上挂了一个时钟。
 ​	有一次他从广东省第二中医院黄埔院区转到孙逸仙医院，在广东省第二中医院黄埔院区时，一个照顾与他同一个病房的老爷爷的小哥哥逗他开心，说喜欢这个护士就做这个手势，不喜欢这个护士就做另一个手势，去到孙逸仙医院，他记得有一个叫韩文燕的护士，他主动和她打招呼，后来一次她给他换针水后，做了那个他在广东省第二中医院住院时那个小哥哥教他的喜欢这个护士就做这个手势的手势，她还把她的手举过头顶，不停地摆动，这才没几天的时间，她怎么知道这个手势的？
 ​	他晚上睡觉出汗，他爸说他是虚，不断说让他吃药，诚然他是虚，但是有没有可能这是排毒的一个表现，他爸老是想叫他吃药是想干嘛，是药三分毒，他在减药量，他在戒毒。他爸给他喝黄芪精口服液，喝黄芪精本来是好的，但是给他下药后再给他喝就另当别论了，出汗是排毒的一个表现，喝了黄芪精口服液他可能就不出汗了。
-​	他爸的名字是梁倚发，他爸也信神、信八字，现在老是想着从天而降的发财，不知道他爸有没有想过，他现在拥有的，就是他的最大财富，他爸现在满口粗口，经常变相说他不是人。他姐说，要不是他变成这样，早就不理这个家了，但这只是他姐个人的话语，并不能代表他的所思所想。满招损，谦受益，树大招风，人啊，总是觉得自己不可一世，总是在失去后才懂得珍惜，总是喜欢玩火自焚。
+​	他爸的名字是梁倚发，他爸也信神、信八字，现在老是想着从天而降的发财，不知道他爸有没有想过，他现在拥有的，就是他的最大财富，他爸现在满口粗口，经常变相说他不是人，一边骂他不是人，一边又说他是人。他姐说，要不是他变成这样，早就不理这个家了，但这只是他姐个人的话语，并不能代表他的所思所想。满招损，谦受益，树大招风，人啊，总是觉得自己不可一世，总是在失去后才懂得珍惜，总是喜欢玩火自焚。
 ​	他只想说，封建思想害死人，封建帝制更害死人。“大人，时代变了”，“你挑的嘛，偶像”，他走的路从来不是他挑的，欲戴王冠，需承其重，既然你不仁，那么也休怪我不义，既然有人这么想戴这顶王冠，这么喜欢过河拆桥、玩火自焚，还不肯放过他，他也要当个没心没肺的人，能怪别人就别怪自己，那他就让你戴个够，让你拆个够，让你玩火玩个够。在你们眼里，他是贼喊捉贼，那大不了就同归于尽，他也是想你们好。君子报仇，十年未晚，十年河东，十年河西，这一次，他选择当一个逃兵，当一次废物，这道题的唯一解也是最优解就是，别再让他继续当人了，他不死，于情于理，好像都有点说不过去，他死于知道得太多，死于活成了别人家的孩子，死于活得太单纯、太清醒了，死于没能做到“防人之心不可无”。希望所有人都能好好地活着，要不然你对不起他，更对不起你自己。从哪里来，回哪里去，人往高处走，水往低处流，希望他的骨灰能够被撒入大海，这也算是他的遗愿了。
 
 
